--- a/Static/Css/Style.css
+++ b/Static/Css/Style.css
@@ -1,14 +1,61 @@
+:root{
+    --background-color: black;
+    --text-color: #D6D2D2;
+    --Border-color : #DEB19E;
+
+    --font-size: 20px;
+    --font-family: system-ui, -apple-system,
+
+}
+
 * {
-    background-color: black;
-    color: aqua;
+    background-color: var(--background-color);
+    color: var(--text-color);
+    font-family:var(--font-family);
+    padding: 2px;
+    /* margin-left: 1em auto; */
+    /* margin-right: em auto; */
+}
+
+/* Tittle */
+h2{
+    border: 2px solid var(--Border-color);
+    border-radius: 1em ;
+    /* padding: 0.6em; */
+    text-transform: uppercase;
+}
+
+/* Cover */
+img{
+    width: 20rem;
+    border-radius: 1em;
+    box-shadow:  red;
+    padding: 1em;
+}
+
+#Lyric{
+    padding: 1em;
+    /* margin: 2e; */
+    width: 55vh;
+    text-align: left;
+
+
 }
 
 .wrapper-main{
+    background-color: var(--background-color);
     width: 1000px;
-    padding: 100px 0;
+    padding: 5px 0 auto ;
     margin: 0 auto;
-    border: 4px solid blue;
+    border: 2px solid var(--Border-color);
     border-radius: 1em;
+    
+}
+
+.index-flex{
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 /* rem */
