--- a/Static/Css/Style.css
+++ b/Static/Css/Style.css
@@ -33,12 +33,14 @@ body {
 }
 
 /* IDK */
-
 .content-top {
   display: flex;
   flex-direction: column;
   padding: 30px;
   height: 100%;
+    display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 /* Main */
@@ -56,12 +58,6 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-}
-
-.index-flex {
-  display: flex;
-  justify-content: center;
-  align-items: center;
 }
 
 /* Card */
@@ -102,8 +98,8 @@ h2 {
 
 /* Cover */
 img {
-  width: 250px;
-  height: 250px;
+  width: 15em;
+  height: 14em;
   margin: 15px auto;
   display: block;
   box-shadow: 0px 8px 24px var(--Cover-Shadow-Color);
