--- a/Static/Css/Style.css
+++ b/Static/Css/Style.css
@@ -41,15 +41,11 @@ body {
 /* IDK */
 .content-top {
   display: flex;
-  /* height:max-content; */
-  /* min-height: 15vh; */
   flex-direction: column;
-  /* padding: 30px; */
-  /* height: 100%; */
-  display: flex;
   justify-content: center;
   align-items: center;
   height: 100vh;
+  width: 100vw;
   padding: 0;
 }
 
@@ -59,7 +55,6 @@ body {
   width: 1000px;
   height: 90vh;
   padding: 20px;
-  /* max-width: 100%; */
   margin: auto;
   border: 2px solid var(--Border-color);
   border-radius: 1em;
@@ -120,21 +115,14 @@ img {
 .Lyric {
   padding: 1.5em;
   font-size: 17px;
-  /* margin: 2e; */
   width: 70%;
   flex: 1; 
   text-align: left;
   line-height: 1.6;
-  white-space: pre-warp;
+  /* white-space: pre-warp; */
   overflow-x: hidden;
   overflow-y: auto;
   margin-bottom: 20px;
-
-  /* overflow-block: scroll ; */
-  /* scroll-behavior: smooth; */
-  /* scrollbar-width:thin; */
-  /* scrollbar-shadow-color: red ; */
-  /* scrollbar-color:  var(--Scroll-Color) ; */
 }
 
 #Lyric::-webkit-scrollbar {
@@ -212,7 +200,6 @@ img {
 @media only screen and (max-width: 600px) and (orientation: portrait) {
   .wrapper-main {
     width: 100%;
-    /* background-color: rgb(33, 46, 218); */
   }
 }
 
