--- a/Static/Css/Style.css
+++ b/Static/Css/Style.css
@@ -304,6 +304,7 @@ img {
   }
 }
 
+/* 4k - 1208 To 2560  */
 
 /*  <600px , 601px , 768px , 992px , above 1200px*/
 /* Highest width display is 8k : 7680pixels */
